cabal-version: >= 1.10
build-type:          Custom

name:                keera-three-balance-checker
version:             0.0.2
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
homepage:            http://keera.co.uk/projects/haskellifi-trayicon
license:             AllRightsReserved
license-file:        LICENSE
category:            Text
synopsis:            A trayicon that notifies you of your Three PayG credit
stability:           Provisional

data-files:
    data/3mobile-sim-card.png
  , data/3mobile-unknown.png
  , data/Interface.glade


-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True


executable keera-three-balance-checker

  main-is:
    Main.hs

  other-modules:
    Controller.Conditions
    Controller.Conditions.BalanceCheck
    Controller.Conditions.PopupMenu
    Controller.Conditions.Quit
    Controller.Conditions.Website
    Model.Model
    Model.ProtectedModel.ProtectedFields
    Model.ReactiveModel.ModelEvents
    Model.ReactiveModel.ReactiveFields
    Paths.CustomPaths
    Three.Balance.Checker
    Three.Balance.TagSoup
    View
    View.Objects

  build-depends:
      base >= 4.0
    , cmdargs
    , glade
    , glib
    , gtk
    , gtk-helpers
    , hails-mvc-environment-gtk
    , hails-mvc-model-protectedmodel
    , hails-mvc-solutions-gtk
    , hails-mvc-view
    , hails-mvc-view-gtk
    , hails-reactive-gtk
    , hails-reactivevalues
    , IfElse
    , MissingK
    , mtl
    , tagsoup
    , webkit

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  if os(windows)
   ghc-options:
     -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options:
     -threaded -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    hlint.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable:
      False
  else
    build-depends:
        base
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable:
      False
  else
    build-depends:
        base >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
